chore(wc): set PORT env variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.show-sql=true
 app.raminapi.email=${RAMIN_API_EMAIL:}
 app.raminapi.password=${RAMIN_API_PASSWORD:}
 
-server.port=${WC_PORT}
+server.port=${PORT:8080}
